Fixes overlapping margin in salesinventoryreorderreport #2879

--- a/src/RentalWorksWebApi/WebpackReports/src/Reports/SalesInventoryReports/SalesInventoryReorderReport/index.scss
+++ b/src/RentalWorksWebApi/WebpackReports/src/Reports/SalesInventoryReports/SalesInventoryReorderReport/index.scss
@@ -48,3 +48,8 @@ thead {
         white-space: nowrap;
     }
 }
+
+@page {
+    size: landscape;
+    margin: 10px 10px 35px 10px; // Adds margin on the pdf
+}
